--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -8,13 +8,13 @@
 }
 
 .project .card {
-  border: solid 1px #4183d7;
+  border: solid 1px #019fb6;
   border-radius: 10px;
-  box-shadow: 0 1px 2px #4183d7;
+  box-shadow: 0 1px 2px #019fb6;
   transition: box-shadow 0.3s ease-in-out;
 }
 .project .card:hover {
-  box-shadow: 0 5px 15px #4183d7;
+  box-shadow: 0 5px 15px #019fb6;
 }
 .projectLink {
   border: none;
