--- a/src/Components/Resume/Resume.css
+++ b/src/Components/Resume/Resume.css
@@ -17,13 +17,13 @@
   border-radius: 10px;
   padding: 5px 10px;
   margin: 20px;
-  border: solid 1px #4183d7;
+  border: solid 1px #019fb6;
   text-align: center;
-  box-shadow: 0 1px 2px #4183d7;
+  box-shadow: 0 1px 2px #019fb6;
   transition: box-shadow 0.3s ease-in-out;
 }
 .box:hover {
-  box-shadow: 0 5px 15px #4183d7;
+  box-shadow: 0 5px 15px #019fb6;
 }
 
 .content-item small {
