--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -5,30 +5,77 @@
 .aboutmeHeading {
   color: #052d38;
   font-weight: 900;
+  font-size: 45px;
 }
 
 .downloadResume {
   border: none;
   background: #052d38;
   font-weight: 700 !important;
-  padding: 20px;
+  padding: 10px;
   border-radius: 6px;
   display: inline-block;
   transition: all 0.3s ease 0s;
   text-decoration: none;
+  font-size: 25px;
   color: #019fb6;
 }
 
 .downloadResume:hover {
   color: #fff !important;
   font-weight: 700 !important;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   background: #019fb6;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.3s ease 0s;
   text-decoration: none;
 }
+
 .skillRating {
   width: 200px;
+}
+
+.aboutmeText {
+  font-size: 25px;
+}
+.skill {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+@media only screen and (max-width: 990px) {
+  .aboutmeHeading {
+    font-size: 30px;
+  }
+  .skill {
+    font-weight: 500;
+    font-size: 18px;
+  }
+  .downloadResume {
+    font-size: 20px;
+    text-align: center;
+  }
+  .aboutmeText {
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .aboutmeHeading {
+    font-size: 30px;
+  }
+  .skill {
+    font-weight: 500;
+    font-size: 15px;
+  }
+  .downloadResume {
+    font-size: 15px;
+    text-align: center;
+  }
+  .aboutmeText {
+    font-size: 15px;
+    text-align: center;
+  }
 }
