--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,31 +5,56 @@
 .ContactHeading {
   color: #052d38;
   font-weight: 900;
+  font-size: 45px;
 }
 
 label {
   font-weight: 600;
   color: #052d38;
+  font-size: 20px;
 }
 .sendMessage {
   border: none;
   background: #052d38;
   font-weight: 700 !important;
-  padding: 20px;
+  padding: 5px;
   border-radius: 6px;
   display: inline-block;
   transition: all 0.3s ease 0s;
   text-decoration: none;
+  font-size: 20px;
+
   color: #019fb6;
 }
 
 .sendMessage:hover {
   color: #fff !important;
   font-weight: 700 !important;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   background: #019fb6;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.3s ease 0s;
   text-decoration: none;
+}
+
+@media only screen and (max-width: 990px) {
+  .ContactHeading {
+    font-size: 30px;
+  }
+  label {
+    font-size: 15px;
+  }
+  .sendMessage {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .ContactHeading {
+    font-size: 30px;
+  }
+  label {
+    font-size: 15px;
+  }
 }
