--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,31 +2,46 @@
   height: 100vh;
 }
 
-@media only screen and (max-width: 450px) {
-  .Home {
-    height: 80vh;
-    margin-top: 70px;
-  }
-}
-
 .greeting {
+  font-size: 60px;
+
   color: #019fb6;
   font-weight: 600;
 }
 
 .intro-greeting {
+  font-size: 60px;
   border-bottom: solid 3px #019fb6;
   color: #052d38;
   font-weight: 900;
 }
 
 .skills-greeting {
-  font-size: larger;
-  font-weight: 600;
-
+  font-size: 35px;
+  font-weight: 520;
   color: #07576d;
 }
 
 .intro {
   margin: auto;
+}
+.typewriter {
+  min-height: 30px;
+}
+@media only screen and (max-width: 550px) {
+  .Home {
+    height: 80vh;
+    margin-top: 70px;
+  }
+  .greeting,
+  .intro-greeting {
+    font-size: 35px;
+  }
+
+  .skills-greeting {
+    font-size: 20px;
+  }
+  .typewriter {
+    min-height: 20px;
+  }
 }
