--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,8 +11,8 @@
   overflow: hidden;
   vertical-align: bottom;
   transition: color 0.3s ease-out;
-  font-weight: 600;
-  font-size: larger;
+  font-weight: 700;
+  font-size: 20px;
   color: #1282a2;
   text-decoration: none;
   display: block;
@@ -27,8 +27,9 @@
 .active {
   font-weight: 700;
 }
-.navbar {
+.scroll-navbar {
   background-color: #f5f5f5;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
 .navbar-brand {
@@ -50,21 +51,7 @@
 }
 
 @media only screen and (max-width: 550px) {
-  .navbar-brand {
-    font-weight: 600;
-    color: #019fb6;
-    padding: 4px;
-    font-size: 20px;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-      "Lucida Sans", Arial, sans-serif;
-    border-bottom: solid 3px #052d38;
-    border-left: solid 3px #052d38;
-    border-radius: 10px;
-  }
-
-  .navbar-brand:hover {
-    color: #052d38;
-    border-radius: 10px;
-    text-shadow: 2px 2px #019fb6;
+  .link {
+    font-size: 15px;
   }
 }
