--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -5,41 +5,80 @@
 .ProjectsHeading {
   color: #052d38;
   font-weight: 900;
+  font-size: 45px;
 }
 
 .project .card {
-  border: solid 1px #019fb6;
+  border: solid 2px #019fb6;
   border-radius: 10px;
-  box-shadow: 0 1px 2px #019fb6;
-  transition: box-shadow 0.3s ease-in-out;
+  min-height: 200px;
+  max-width: 500px;
+  margin: auto;
 }
-.project .card:hover {
-  box-shadow: 0 5px 15px #019fb6;
-}
+
 .projectLink {
   border: none;
   background: #019fb6;
-  font-weight: 500 !important;
-  padding: 6px;
-  border-radius: 3px;
+  font-weight: 700 !important;
+  padding: 5px;
+  border-radius: 6px;
   display: inline-block;
   transition: all 0.3s ease 0s;
   text-decoration: none;
+  font-size: 18px;
   color: #fff;
 }
 
 .projectLink:hover {
   color: #019fb6 !important;
-  font-weight: 500 !important;
-  letter-spacing: 1px;
+  font-weight: 700 !important;
+  letter-spacing: 2px;
   background: #052d38;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.3s ease 0s;
   text-decoration: none;
 }
+.project h3 {
+  font-size: 25px;
+  line-height: 1;
+  font-weight: 700;
+  /* text-transform: uppercase; */
+  margin-bottom: 20px;
+}
+.modal-body {
+  font-size: 20px;
+}
 
-.skill {
-  font-weight: 500;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+@media only screen and (max-width: 990px) {
+  .ProjectsHeading {
+    font-size: 30px;
+  }
+  .project h3 {
+    font-size: 20px;
+  }
+
+  .projectLink {
+    font-size: 14px;
+  }
+  .modal-body {
+    font-size: 18px;
+  }
+  /* {
+    font-size: 15px;
+  } */
+}
+
+@media only screen and (max-width: 550px) {
+  .ProjectsHeading {
+    font-size: 30px;
+  }
+
+  .modal-body {
+    font-size: 13px;
+  }
+
+  .project h3 {
+    font-size: 18px;
+  }
 }
